; ModuleID = '/home/carl/AnghaBench/libevent/test/extr_regress_http.c_http_timeout_cb.c'
source_filename = "/home/carl/AnghaBench/libevent/test/extr_regress_http.c_http_timeout_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.timeval = type { i32, i32 }
%struct.evhttp_request = type { i32 }

@__const.http_timeout_cb.when = private unnamed_addr constant %struct.timeval { i32 0, i32 100 }, align 4
@exit_base = common dso_local global i32 0, align 4
@EV_TIMEOUT = common dso_local global i32 0, align 4
@http_timeout_reply_cb = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.evhttp_request*, i8*)* @http_timeout_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @http_timeout_cb(%struct.evhttp_request* %0, i8* %1) #0 {
  %3 = alloca %struct.evhttp_request*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.timeval, align 4
  store %struct.evhttp_request* %0, %struct.evhttp_request** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = bitcast %struct.timeval* %5 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %6, i8* align 4 bitcast (%struct.timeval* @__const.http_timeout_cb.when to i8*), i64 8, i1 false)
  %7 = load i32, i32* @exit_base, align 4
  %8 = load i32, i32* @EV_TIMEOUT, align 4
  %9 = load i32, i32* @http_timeout_reply_cb, align 4
  %10 = load %struct.evhttp_request*, %struct.evhttp_request** %3, align 8
  %11 = call i32 @event_base_once(i32 %7, i32 -1, i32 %8, i32 %9, %struct.evhttp_request* %10, %struct.timeval* %5)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i32 @event_base_once(i32, i32, i32, i32, %struct.evhttp_request*, %struct.timeval*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
